<resources>
    <string name="app__name">Avario</string>
    <string name="app__empty"></string>

    <string name="app__url__mqtt">tcp://192.168.57.1:1883</string>
    <string name="app__url__mqtt_topic">avario</string>
    <string name="app__url__assetroot">/local/assets</string>
    <string name="app__url__bootstrap">/local/bootstrap.json</string>
    <string name="app__path__bootstrap">bootstrap.json</string>
    <string name="app__path__notif">notifications.json</string>

    <string name="mode__climate">Climate</string>
    <string name="mode__energy">Energy</string>
    <string name="mode__cctv">CCTV</string>

    <string name="deviceslist__selected">%1$d Selected</string>
    <string name="medialist__unknown__title">Unknown Media</string>
    <string name="medialist__unknown__artist">Unknown Artist</string>
    <string name="medialist__unknown__album">Unknown Album</string>
    <string name="medialist__unknown__timer">--:--</string>
    <string name="sourcelist__unknown">Unknown Media Source</string>

    <string name="dial__powervalue">%1$d%2$s</string>
    <string name="dial__powerdefault">0%%</string>
    <string name="dial__coveropen">OPEN</string>
    <string name="dial__coverclose">CLOSE</string>
    <string name="dial__coverstop">STOP</string>

    <string name="setting__host">Host Domain / IP</string>
    <string name="setting__host__hint">0.0.0.0</string>
    <string name="setting__port">Host Port</string>
    <string name="setting__port__hint">80</string>
    <string name="setting__ssl">SSL</string>
    <string name="setting__username">Username</string>
    <string name="setting__password">Password</string>
    <string name="setting__title">Settings</string>
    <string name="setting_get_new_bootstrap">Get new Bootstrap</string>
    <string name="setting__save">Save</string>
    <string name="setting__discard">Cancel</string>
    <string name="setting__working">Working...%1$s</string>
    <string name="setting__toast__cleared">Cache cleared</string>
    <string name="setting__toast__empty">Please set all the settings correctly</string>

    <string name="notif__close">Close</string>

    <string name="message__mqtt__connecting">Connecting MQTT...</string>
    <string name="message__state__fetching">Refreshing states...</string>

    <string name="not_lock_whitelisted">This app has not been given Device Owner
        privileges to manage this device and start lock task mode</string>

    <string name="error__generic">[0x00000] Unexpected Error Occurred</string>
    <string name="error__0x00100">[0x00100] Bootstrap JSON could not be fetched from the server</string>
    <string name="error__0x00110">[0x00110] Invalid username / password combination when fetching bootstrap JSON</string>
    <string name="error__0x00120">[0x00120] Bootstrap JSON could not be parsed</string>
    <string name="error__0x00200">[0x00200] Asset "%s" could not be fetched</string>
    <string name="delete_assets">Delete assets</string>
    <string name="kiosk_mode">Kiosk Mode</string>
    <string name="download_assets">Download Assets</string>
    <string name="message_new_bootstrap">Bootstrap updated</string>


    <!-- Drawer Items -->
    <string name="drawer_item_persistent_compact_header">PersistentHeader Drawer</string>
    <string name="drawer_item_persistent_compact_header_desc">Smaller persistent account header</string>
    <string name="drawer_item_compact_header">CompactHeader Drawer</string>
    <string name="drawer_item_compact_header_desc">Smaller account header</string>
    <string name="drawer_item_action_bar_drawer">ActionBar Drawer</string>
    <string name="drawer_item_action_bar_drawer_desc">Shows how to use with an actionbar</string>
    <string name="drawer_item_multi_drawer">Multi Drawer</string>
    <string name="drawer_item_multi_drawer_desc">Left and Right side drawer</string>
    <string name="drawer_item_non_translucent_status_drawer">NonTranslucentStatus Drawer</string>
    <string name="drawer_item_non_translucent_status_drawer_desc">Drawer below statusBar</string>
    <string name="drawer_item_advanced_drawer">Advanced Drawer</string>
    <string name="drawer_item_advanced_drawer_desc">More advanced drawer features</string>
    <string name="drawer_item_embedded_drawer">Embedded Drawer</string>
    <string name="drawer_item_embedded_drawer_desc">Embed the drawer anywhere</string>
    <string name="drawer_item_mini_drawer">MiniDrawer</string>
    <string name="drawer_item_mini_drawer_desc">Always visible MiniDrawer</string>
    <string name="drawer_item_fullscreen_drawer">FullScreen Drawer</string>
    <string name="drawer_item_fullscreen_drawer_desc">Drawer in FullScreen activity</string>
    <string name="drawer_item_custom_container_drawer">CustomContainer Drawer</string>
    <string name="drawer_item_custom_container_drawer_desc">Drawer in different view hirachy</string>
    <string name="drawer_item_menu_drawer">Menu Drawer</string>
    <string name="drawer_item_menu_drawer_desc">Drawer from menu.xml</string>
    <string name="drawer_item_fragment_drawer">Fragment Drawer</string>
    <string name="drawer_item_fragment_drawer_desc">Use drawer within fragments</string>
    <string name="drawer_item_collapsing_toolbar_drawer">CollapsingToolbar Drawer</string>
    <string name="drawer_item_collapsing_toolbar_drawer_desc">Uses a CollapsingToolbarLayout</string>
    <string name="drawer_item_crossfade_drawer_layout_drawer">CrossfadeDrawerLayout</string>
    <string name="drawer_item_crossfade_drawer_layout_drawer_desc">2-Step Drawer behavior</string>

    <string name="drawer_item_menu_drawer_item">Menu Drawer Item</string>
    <string name="drawer_item_menu_drawer_item_desc">Sample menu item with overflow button</string>

    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_free_play">Free Play</string>
    <string name="drawer_item_custom">Custom</string>
    <string name="drawer_item_section_header">Section Header</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help</string>
    <string name="drawer_item_open_source">Open Source</string>
    <string name="drawer_item_contact">Contact</string>
    <string name="update_availabe">New update is available to download. By downloading the latest update you will get the latest features, improvements and bug fixes</string>
    <string name="no_update">You\'ve the latest version available.</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>
</resources>
