<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dialog__padding">

        <!-- Host IP Field -->
        <TextView
            android:id="@+id/setting__host_ip__label"
            android:layout_width="@dimen/settings__field__width"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/setting__host_ip"
            android:layout_alignParentStart="true"
            android:text="@string/setting__host" />

        <EditText
            android:id="@id/setting__host_ip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/setting__host_ip__label"
            android:hint="@string/setting__host__hint"
            android:inputType="text" />


        <!-- Port / SSL -->
        <TextView
            android:layout_width="@dimen/settings__field__width"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/setting__host_port"
            android:layout_alignParentStart="true"
            android:layout_below="@id/setting__host_ip"
            android:text="@string/setting__port" />

        <EditText
            android:id="@id/setting__host_port"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/setting__host_ip"
            android:layout_toEndOf="@id/setting__host_ip__label"
            android:layout_toStartOf="@+id/setting__ssl"
            android:digits="0123456789"
            android:hint="@string/setting__port__hint"
            android:imeOptions="actionNext"
            android:inputType="number" />

        <CheckBox
            android:id="@id/setting__ssl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/setting__host_port"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/setting__host_ip"
            android:text="@string/setting__ssl" />

        <!-- Username -->
        <TextView
            android:layout_width="@dimen/settings__field__width"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/setting__username"
            android:layout_alignParentStart="true"
            android:layout_below="@id/setting__host_port"
            android:text="@string/setting__username" />

        <EditText
            android:id="@id/setting__username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/setting__host_port"
            android:layout_toEndOf="@id/setting__host_ip__label"
            android:imeOptions="actionNext"
            android:inputType="text" />


        <!-- Password -->
        <TextView
            android:layout_width="@dimen/settings__field__width"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/setting__password"
            android:layout_alignParentStart="true"
            android:layout_below="@id/setting__username"
            android:text="@string/setting__password" />

        <EditText
            android:id="@id/setting__password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/setting__username"
            android:layout_toEndOf="@id/setting__host_ip__label"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/text_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/setting__password"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/check_kiosk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/setting__password"
            android:layout_marginTop="10dp"
            android:text="Kiosk Mode" />

        <TextView
            android:id="@+id/text_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/text_version" />

        <!-- Working Message -->
        <LinearLayout
            android:id="@+id/working__holder"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/setting__password"
            android:orientation="horizontal"
            android:visibility="invisible">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:indeterminate="true" />

            <TextView
                android:id="@+id/working__label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/setting__working" />
        </LinearLayout>

        <TextView
            android:id="@+id/error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/text_version"
            android:textColor="@color/red"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnClearAssets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/error"
            android:background="@drawable/settings_dialog_button"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:visibility="gone"
            android:text="@string/clear_assets" />
    </RelativeLayout>
</ScrollView>